# dtrlb

./: .gitignore  README.md  dtrlb.py  pyproject.toml  ydl.py
examples/: simple_bot.py
src/dtrlb/: __init__.py  dtrlb.py
src/dtrlb/plugins/: __init__.py  basic.py  echo.py
