[project]
name = "dtrlb"
version = "0.1.0"
description = "All-in-One bot framework for you!"
readme = "README.md"
authors = [
    { name = "libdmmy", email = "itsdummybot@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pytelegrambotapi>=4.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
